# Rust_for_everyone

./: Cargo.toml  README.md
Chapter_3/: README.md
Chapter_3/Chapter_3_exercises/: Chapter_3_level_0.rs  Chapter_3_level_1.rs  MCQ_Variables_and_Mutability  MCQ_Variables_and_Mutability.rs  Variables_and_Mutability
src/: lib.rs
src/chapter_01/: README.md
src/chapter_03/: README.md  chapter_3_level_0.rs  chapter_3_level_1.rs  chapter_3_level_2.rs  chapter_3_mcq.rs  mod.rs
src/chapter_04/: README.md  chapter_4_level_0.rs  chapter_4_level_1.rs  chapter_4_level_2.rs  chapter_4_mcq.rs  mod.rs
src/chapter_05/: README.md  chapter_5_level_0 responses.rs  chapter_5_level_0.rs  chapter_5_level_1.rs  chapter_5_level_2.rs  chapter_5_mcq.rs  mod.rs
src/chapter_06/: README.md  chapter_6_level_0.rs  chapter_6_level_1.rs  chapter_6_level_2.rs  chapter_6_mcq.rs  mod.rs
src/chapter_07/: README.md  chapter_7_level_0.rs  chapter_7_level_1.rs  chapter_7_level_2.rs  chapter_7_mcq.rs  mod.rs
src/chapter_08/: README.md  chapter_8_level_0.rs  chapter_8_level_1.rs  chapter_8_level_2.rs  chapter_8_mcq.rs  mod.rs
src/chapter_09/: README.md  chapter_9_level_0.rs  chapter_9_level_1.rs  chapter_9_level_2.rs  chapter_9_mcq.rs  mod.rs
src/chapter_10/: README.md  chapter_10_level_0.rs  chapter_10_level_1.rs  chapter_10_level_2.rs  chapter_10_mcq.rs  mod.rs
src/chapter_11/: README.md  chapter_11_level_0.rs  chapter_11_level_1.rs  chapter_11_level_2.rs  chapter_11_mcq.rs  mod.rs
src/chapter_13/: chapter_13_level_0.rs  chapter_13_level_0_solution.rs  chapter_13_level_1.rs  mod.rs  (+2 more)
(+42 files in other folders)
